fix align

--- a/private_html/css/common.css
+++ b/private_html/css/common.css
@@ -131,7 +131,7 @@ img.img-caruusel:hover {
 }
 .social-icons {
     position: fixed;
-    top: 40%;
+    top: 35%;
     right: 15px;
     display: flex;
     flex-direction: column;
@@ -164,6 +164,9 @@ img.img-caruusel:hover {
     background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+}
+.social-icons .fa-facebook {
+    background-color: #2c80d3;
 }
 .social, .locale {
     margin-top: 100px;
